--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "pinkoi-coins-bot",
   "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "description": "Get pinkoi coins everyday.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build src/index.ts -o dist -m"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Hyperbola",
   "dependencies": {
     "axios": "^0.27.2",
     "commander": "^9.3.0",
@@ -17,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.39",
+    "@vercel/ncc": "^0.34.0",
     "typescript": "^4.7.3"
   }
 }
