--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "1.2.0",
   "private": true,
   "description": "Get pinkoi coins everyday.",
+  "author": {
+    "name": "Hyperbola",
+    "email": "me@hyperbola.me",
+    "url": "https://github.com/wdzeng"
+  },
+  "homepage": "https://github.com/wdzeng/pinkoi-coins-bot",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wdzeng/pinkoi-coins-bot.git"
+  },
+  "packageManager": "pnpm@7.2.1",
   "scripts": {
     "build": "ncc build src/index.ts -o dist -m"
   },
-  "author": "Hyperbola",
   "dependencies": {
     "axios": "^0.27.2",
     "commander": "^9.3.0",
@@ -17,5 +27,9 @@
     "@types/node": "^17.0.39",
     "@vercel/ncc": "^0.34.0",
     "typescript": "^4.7.3"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/wdzeng/pinkoi-coins-bot/issues"
+  },
+  "license": "MIT"
 }
