feat: update CI/CD to add tag only on push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           repo_license: MIT
   tag:
     name: Add tags to repository
+    if: ${{ github.event_name == 'push' }}
     needs:
       - build
     runs-on: ubuntu-latest
