--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
         with:
           dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
           dockerhub-password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repo_description: Get pinkoi coins everyday
-          repo_license: MIT
+          repo-description: Get pinkoi coins everyday
+          repo-license: MIT
   tag:
     name: Add tags to repository
     if: ${{ github.event_name == 'push' }}
