--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "https://json.schemastore.org/github-workflow.json": "file:///home/hyperbola/repo/pinkoi-coins-bot/.github/workflows/build.yml"
     },
     "cSpell.words": [
-        "pinkoi"
+        "pinkoi",
+        "favlist"
     ]
 }
